# em_cpp_mapa

./: .gitignore  CMakeLists.txt  README.md  mapa_config.h.in
cmake_modules/: FindGFortran.cmake
data/: InfovisVAST-papers.xml  MotionSegmentation_set1_data_10d.dmat  MotionSegmentation_set1_labels.dmat  MotionSegmentation_set2_data_10d.dmat  MotionSegmentation_set2_labels.dmat  MotionSegmentation_set3_data_10d.dmat  MotionSegmentation_set3_labels.dmat  PapersTextCluster.xml  SNData.xml  artdat_rev1_estdim_delta1.dmat  artdat_rev1_estdim_delta2.dmat  artdat_rev1_estdim_delta60.dmat  artdat_rev1_estdim_s1.dmat  artdat_rev1_estdim_s60.dmat  artdat_rev1_lmsvd_allestdims.dmat  artdat_rev1_lmsvd_allgoodscales.dmat  artdat_rev1_lmsvd_out_estdims.dmat  artdat_rev1_lmsvd_out_goodseeds.dmat  artdat_rev1_nrsearch_idxs.dmat  artdat_rev1_nrsearch_seeds.dmat  artdat_rev1_nrsearch_statdists.dmat  artificial_aprioriLabels_rev1.dmat  artificial_data_rev1.mat  english_stopwords  face_clustering_svd_in_data.dmat  face_clustering_svd_in_labels.dmat
data/SNData/: 10000  10001  10002  10003  10004  10005  10006  10007  10008  10009  10010  10011  10012  10013  10014  10015  10016  10017  10018  10019  10020  10021  10022  10023  10024  10025  10026  10027  10028  10029  10030  10031  10032  10033  10034  10035  10036  10037  10038  10039  (+1120 more)
data/SN_Metadata/: LabelsMeaning.txt  credit.txt  pure.classes  sn_titles.txt
data/lmsvd_out/: artdat_rev1_lmsvd_mid_spectra1.dmat  artdat_rev1_lmsvd_mid_spectra10.dmat  artdat_rev1_lmsvd_mid_spectra11.dmat  artdat_rev1_lmsvd_mid_spectra12.dmat  artdat_rev1_lmsvd_mid_spectra13.dmat  artdat_rev1_lmsvd_mid_spectra14.dmat  artdat_rev1_lmsvd_mid_spectra15.dmat  artdat_rev1_lmsvd_mid_spectra16.dmat  artdat_rev1_lmsvd_mid_spectra17.dmat  artdat_rev1_lmsvd_mid_spectra18.dmat  artdat_rev1_lmsvd_mid_spectra19.dmat  artdat_rev1_lmsvd_mid_spectra2.dmat  artdat_rev1_lmsvd_mid_spectra20.dmat  artdat_rev1_lmsvd_mid_spectra21.dmat  artdat_rev1_lmsvd_mid_spectra22.dmat  artdat_rev1_lmsvd_mid_spectra23.dmat  artdat_rev1_lmsvd_mid_spectra24.dmat  artdat_rev1_lmsvd_mid_spectra25.dmat  artdat_rev1_lmsvd_mid_spectra26.dmat  artdat_rev1_lmsvd_mid_spectra27.dmat  artdat_rev1_lmsvd_mid_spectra28.dmat  artdat_rev1_lmsvd_mid_spectra29.dmat  artdat_rev1_lmsvd_mid_spectra3.dmat  (+92 more)
lib/: CMakeLists.txt
lib/KMeansRex/: KMeansRex.cpp  KMeansRex.mexmaci64  KMeansRexCore.cpp
lib/KMeansRex/KMeansRex/: __init__.py
lib/SVDLIBC/: CMakeLists.txt  las2.c  svdlib.c  svdlib.h  svdutil.c  svdutil.h
lib/Sam/linalg/: EigenRandomSVD.h  StreamingRandomSVD.h
lib/Sam/metrics/: FastSimpleWarpMetric.h  ImageMetric.h  MetricImageMetricAdapter.h  SobolevMetric.h
lib/Sam/statistics/: AAKernelMap.h  AKernelMap.h  CEM2.h  CEMKernelFunction.h  GaussianKernel.h  KMM.h  KernelMap.h  LabelKMM.h  MRegression.h  Random.h  UKR1.h  WeightedKMM.h
lib/Sam/utils/: EnableFloatingPointExceptions.h
lib/ann/: CMakeLists.txt
lib/dirent-1.20.1/: readme.txt
lib/igl/: readDMAT.cpp  slice.cpp
lib/io/: IO.h
lib/kmeans/: kMeansRex.h  mersenneTwister2002.h
lib/linalg/: EigenRandomRange.h  LapackDefs.h  Linalg.h
lib/mapa/: BoostDIRtokenizer.h  ComputingBases.h  DIRtokenizer.h  EstimateDimFromSpectra.h  JIGtokenizer.h  LMsvd.h  Mapa.h  NRsearch.h  Options.h  SpectralAnalysis.h  SvdlibcSVD.h  TDMgenerator.h  UtilityCalcs.h  XMLclusterdoc.h  kMeansRex.h  mersenneTwister2002.h
lib/metrics/: FirstOrderLevelSetMetric.h  ImageMetricMetricAdapter.h  SimpleWarpMetric.h  SimpleWarpMetric2.h
lib/redsvd-0.2.0/src/: redsvd.hpp  redsvdIncr.hpp  util.hpp
lib/statistics/: BlockCEM.h  CEMA2.h  CEMFunction.h  CEM_Mahalanobis.h  ConditionalGaussianDensity.h  FirstOrderKernelRegression.h  HPC.h  Isomap.h  KMM2.h  KMM3.h  KMMRegression.h  KernelMap2.h  LevelSetKMM.h  SampleStatistics.h  SpatialMedian.h  UKR.h  Wasserstein.h
lib/tclap/: MultiArg.h  ValueArg.h
lib/tinyxml2/: CMakeLists.txt
lib/utils/: Neighborhoods.h
notes/: diff_win_20140611.txt
src/: CMakeLists.txt  mapa_clustering.cpp
src/config/: MyConfig.h
src/include/: ComputingBases.h  DIRtokenizer.h  LMsvd.h  Mapa.h  NRsearch.h  SpectralAnalysis.h  TDMgenerator.h  UtilityCalcs.h  XMLclusterdoc.h  kMeansRex.h
tests/: CMakeLists.txt
tests/KMeansRex/: KMeansRex.mexmaci64  KMeansRexCore.cpp
tests/KMeansRex/KMeansRex/: KMeansRex.py
tests/all_svd_test/: CMakeLists.txt  jig_all_test.cpp
tests/dirent_examples/: ls.cpp
tests/kmeans_test/: CMakeLists.txt  artificial_data_rev1.dmat  kmeans_test.cpp  random_test.cpp
tests/libigl_test/: reshape.cpp  slice.cpp  stddev.cpp
tests/mapa_pieces_test/: CMakeLists.txt  estdim_test.cpp  jig_mapa_test.cpp  logical_indexing.cpp  mapa_test.cpp
tests/svd_test/: CMakeLists.txt  SVD.cxx
tests/svdlibc_test/: CMakeLists.txt  dense_svd.cpp  eigen_sparse_fill.cpp  jig_svd_test.cpp  sparse_svd.cpp
tests/tokenize_test/: ann_tokenize_test.cpp  dir_tdm_test.cpp  jig_tdm_test.cpp
tools/: CMakeLists.txt
tools/KMeansRex/: KMeansSeedsRex.cpp  KMeansSeedsRex.mexmaci64  build.sh  matlibnames.sh
tools/dirent_examples/: CMakeLists.txt  ls.cpp
tools/kmeans_test/: CMakeLists.txt  dmat.cpp  kmeans_test.cpp  random_test.cpp
tools/libigl_test/: CMakeLists.txt  cat.cpp  hello.cpp  norm.cpp  slice.cpp  sortrows.cpp  stddev.cpp  unique.cpp
tools/mapa_pieces_test/: CMakeLists.txt  ann_obj_test.cpp  ann_test.cpp  combinations_test.cpp  dir_mapa_test.cpp  estdim_test.cpp  jig_mapa_test.cpp  lmsvd_test.cpp  logical_indexing.cpp  mapa_face_clustering_test.cpp  mapa_motion_segmentation_test.cpp  mapa_test.cpp  mode.cpp  opts_test.cpp  quantile_transfer.cpp  randsample_test.cpp
tools/svd_test/: CMakeLists.txt  EigenRandomSVD.cxx
tools/svdlibc_test/: CMakeLists.txt  dir_svd_test.cpp  eigen_sparse_fill.cpp  jig_red_test.cpp  jig_svd_test.cpp  sparse_svd.cpp
tools/tokenize_test/: CMakeLists.txt  InfovisVAST-papers.jig  ann_tokenize_test.cpp  boost_dir_tdm_test.cpp  dir_tdm_test.cpp  eigen_tokenize_test.cpp  jig_tdm_test.cpp  main.cpp  sparse_tokenize_test.cpp  tartarus_org_stopwords.txt  tdm_test.cpp  tinyxml2.cpp  xmltest.h
(+97 files in other folders)
