CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(MAPA_Lib)

option(BUILD_ANN "Build ANN (required for some apps)" ON)
if(BUILD_ANN)
  ADD_SUBDIRECTORY(ann)
endif(BUILD_ANN)

option(BUILD_TINYXML2 "Build TINYXML2 (required for some apps)" ON)
if(BUILD_TINYXML2)
  ADD_SUBDIRECTORY(tinyxml2)
endif(BUILD_TINYXML2)
