CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(MAPA_Lib)

option(BUILD_LIB_ANN "Build ANN (required for some apps)" ON)
if(BUILD_LIB_ANN)
  ADD_SUBDIRECTORY(ann)
endif(BUILD_LIB_ANN)

option(BUILD_LIB_SVDLIBC "Build SVDLIBC (required for some apps)" ON)
if(BUILD_LIB_SVDLIBC)
  ADD_SUBDIRECTORY(SVDLIBC)
endif(BUILD_LIB_SVDLIBC)

option(BUILD_LIB_TINYXML2 "Build TINYXML2 (required for some apps)" ON)
if(BUILD_LIB_TINYXML2)
  ADD_SUBDIRECTORY(tinyxml2)
endif(BUILD_LIB_TINYXML2)
