PROJECT(MAPA_JIG_CLUSTERING)

INCLUDE_DIRECTORIES(. ${MAPA_INCLUDE_DIRS})

if(WIN32)
  INCLUDE_DIRECTORIES( ${MAPA_SOURCE_DIR}/lib/dirent-1.20.1/include/ )
endif(WIN32)

ADD_DEFINITIONS(-DIGL_HEADER_ONLY)

LINK_DIRECTORIES( ${ANN_LINK_DIR} ${SVD_LINK_DIR} ${TINYXML2_LINK_DIR} )

ADD_EXECUTABLE(mapa_jig_clustering mapa_jig_clustering.cpp)
TARGET_LINK_LIBRARIES(mapa_jig_clustering tinyxml2 myann svd)
