PROJECT(MAPA_CLUSTERING)

INCLUDE_DIRECTORIES(. ${MAPA_INCLUDE_DIRS})

if(WIN32)
  INCLUDE_DIRECTORIES( ${MAPA_SOURCE_DIR}/lib/dirent-1.20.1/include/ )
endif(WIN32)

ADD_DEFINITIONS(-DIGL_HEADER_ONLY)

LINK_DIRECTORIES( ${ANN_LINK_DIR} ${SVD_LINK_DIR} ${TINYXML2_LINK_DIR} )

ADD_EXECUTABLE(mapa_clustering mapa_clustering.cpp)
TARGET_LINK_LIBRARIES(mapa_clustering tinyxml2 myann svd)

SET_TARGET_PROPERTIES( mapa_clustering
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
