PROJECT(MAPA_Tools)

option(BUILD_TEST_MAPA "Build MAPA test" OFF)
if(BUILD_TEST_MAPA)
  ADD_SUBDIRECTORY(mapa_pieces_test)
endif(BUILD_TEST_MAPA)

option(BUILD_TEST_SVDLIBC "Build SVDLIBC test" OFF)
if(BUILD_TEST_SVDLIBC)
  ADD_SUBDIRECTORY(svdlibc_test)
endif(BUILD_TEST_SVDLIBC)

option(BUILD_TEST_ALLSVD "Build all SVD comparison test" OFF)
if(BUILD_TEST_ALLSVD)
  ADD_SUBDIRECTORY(all_svd_test)
endif(BUILD_TEST_ALLSVD)

option(BUILD_TEST_SAMSVD "Build Sam's SVD test" OFF)
if(BUILD_TEST_SAMSVD)
  ADD_SUBDIRECTORY(svd_test)
endif(BUILD_TEST_SAMSVD)

option(BUILD_TEST_TOKENIZE "Build TOKENIZE test" OFF)
if(BUILD_TEST_TOKENIZE)
  ADD_SUBDIRECTORY(tokenize_test)
endif(BUILD_TEST_TOKENIZE)

option(BUILD_TEST_LIBIGL "Build LIBIGL test" OFF)
if(BUILD_TEST_LIBIGL)
  ADD_SUBDIRECTORY(libigl_test)
endif(BUILD_TEST_LIBIGL)

option(BUILD_TEST_KMEANS "Build KMEANS test" OFF)
if(BUILD_TEST_KMEANS)
  ADD_SUBDIRECTORY(kmeans_test)
endif(BUILD_TEST_KMEANS)

option(BUILD_TEST_DIRENT "Build DIRENT test" OFF)
if(BUILD_TEST_DIRENT)
  ADD_SUBDIRECTORY(dirent_examples)
endif(BUILD_TEST_DIRENT)


