PROJECT(MAPA_Tools)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")

INCLUDE_DIRECTORIES(. config ${MAPA_INCLUDE_DIRS})


option(BUILD_SVD_TEST "Build SVD test" ON)
if(BUILD_SVD_TEST)
  ADD_SUBDIRECTORY(svd_test)
endif(BUILD_SVD_TEST)

option(BUILD_TOKENIZE_TEST "Build TOKENIZE test" ON)
if(BUILD_TOKENIZE_TEST)
  ADD_SUBDIRECTORY(tokenize_test)
endif(BUILD_TOKENIZE_TEST)

option(BUILD_LIBIGL_TEST "Build LIBIGL test" ON)
if(BUILD_LIBIGL_TEST)
  ADD_SUBDIRECTORY(libigl_test)
endif(BUILD_LIBIGL_TEST)

option(BUILD_KMEANS_TEST "Build KMEANS test" ON)
if(BUILD_KMEANS_TEST)
  ADD_SUBDIRECTORY(kmeans_test)
endif(BUILD_KMEANS_TEST)

