PROJECT(MAPA_Tools)

option(BUILD_MAPA_PIECES_TEST "Build MAPA test" ON)
if(BUILD_MAPA_PIECES_TEST)
  ADD_SUBDIRECTORY(mapa_pieces_test)
endif(BUILD_MAPA_PIECES_TEST)

option(BUILD_SVDLIBC_TEST "Build SVDLIBC test" OFF)
if(BUILD_SVDLIBC_TEST)
  ADD_SUBDIRECTORY(svdlibc_test)
endif(BUILD_SVDLIBC_TEST)

option(BUILD_SVD_TEST "Build SVD test" OFF)
if(BUILD_SVD_TEST)
  ADD_SUBDIRECTORY(svd_test)
endif(BUILD_SVD_TEST)

option(BUILD_TOKENIZE_TEST "Build TOKENIZE test" OFF)
if(BUILD_TOKENIZE_TEST)
  ADD_SUBDIRECTORY(tokenize_test)
endif(BUILD_TOKENIZE_TEST)

option(BUILD_LIBIGL_TEST "Build LIBIGL test" OFF)
if(BUILD_LIBIGL_TEST)
  ADD_SUBDIRECTORY(libigl_test)
endif(BUILD_LIBIGL_TEST)

option(BUILD_KMEANS_TEST "Build KMEANS test" OFF)
if(BUILD_KMEANS_TEST)
  ADD_SUBDIRECTORY(kmeans_test)
endif(BUILD_KMEANS_TEST)

option(BUILD_DIRENT_TEST "Build DIRENT test" OFF)
if(BUILD_DIRENT_TEST)
  ADD_SUBDIRECTORY(dirent_examples)
endif(BUILD_DIRENT_TEST)

