CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)


PROJECT(svdlibc)

INCLUDE_DIRECTORIES( . )

SET(SVDLIBC_INCLUDE_FILES 
    svdlib.h
    svdutil.h
)

SET(SVDLIBC_SOURCE_FILES 
    svdlib.c
    svdutil.c
    las2.c
)

ADD_LIBRARY( svd  ${SVDLIBC_INCLUDE_FILES} ${SVDLIBC_SOURCE_FILES})
TARGET_LINK_LIBRARIES( svd m )
