PROJECT(SVDLIBC_Test)

FIND_PACKAGE(LAPACK)
FIND_PACKAGE(BLAS)
FIND_LIBRARY(GFORTRAN_LIBRARY gfortran)

INCLUDE_DIRECTORIES(. ${MAPA_INCLUDE_DIRS})
ADD_DEFINITIONS(-DIGL_HEADER_ONLY)

LINK_DIRECTORIES( ${SVD_LINK_DIR} ${REDSVD_LINK_DIR} ${ANN_LINK_DIR} )

ADD_EXECUTABLE(jig_all_test jig_all_test.cpp)
# TARGET_LINK_LIBRARIES(jig_all_test tinyxml2 svd redsvd ${GFORTRAN_LIBRARY} lapack blas)
TARGET_LINK_LIBRARIES(jig_all_test tinyxml2 svd ${GFORTRAN_LIBRARY} lapack blas)
