PROJECT(MAPA_Pieces)

FIND_PACKAGE(LAPACK)
FIND_PACKAGE(BLAS)
FIND_LIBRARY(GFORTRAN_LIBRARY gfortran)

INCLUDE_DIRECTORIES(. ${MAPA_INCLUDE_DIRS})
LINK_DIRECTORIES( ${ANN_LINK_DIR} )

ADD_EXECUTABLE(SVD SVD.cxx)
TARGET_LINK_LIBRARIES (SVD ${GFORTRAN_LIBRARY} lapack blas)

ADD_EXECUTABLE(EigenRandomSVD EigenRandomSVD.cxx)
TARGET_LINK_LIBRARIES (EigenRandomSVD ${GFORTRAN_LIBRARY} lapack blas)

