PROJECT(SVDLIBC_Test)

INCLUDE_DIRECTORIES(. ${MAPA_INCLUDE_DIRS})
ADD_DEFINITIONS(-DIGL_HEADER_ONLY)

LINK_DIRECTORIES( ${SVD_LINK_DIR} )

ADD_EXECUTABLE(eigen_sparse_fill eigen_sparse_fill.cpp)
TARGET_LINK_LIBRARIES(eigen_sparse_fill svd)

ADD_EXECUTABLE(svdmain main.c)
TARGET_LINK_LIBRARIES(svdmain svd)

